added s in https to homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-maps",
-  "homepage": "http://neby10.github.io/react-district-predictor/",
+  "homepage": "https://neby10.github.io/react-district-predictor/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
