--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-maps",
+  "name": "react-district-predictor",
   "homepage": "https://neby10.github.io/react-district-predictor/",
   "version": "0.1.0",
   "private": true,
